# AGreatEscape

./: AGreatEscapeCollection.users.json  README.md
src/backend/: CodefuerDurchfluss.py  Dockerfile  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/backend/ExcelOut/: Exceltest1000*1000
src/backend/backend/: DBModelUser.py  FigurenmitNamen23.py  FigurenmitNamen25.py  Floorplan.py  __init__.py  __main__.py  ai.py  backend.py  get_center.py  get_target.py
src/backend/backend/.history/: Floorplan_20231129125138.py  Floorplan_20231129125401.py  Floorplan_20231129125402.py  Floorplan_20231129125408.py  Floorplan_20231129125416.py  Floorplan_20231129125419.py  Floorplan_20231129125420.py  Floorplan_20231129125425.py  Floorplan_20231129125433.py  Floorplan_20231129125446.py  Floorplan_20231129125447.py  Floorplan_20231129125451.py  Floorplan_20231129125718.py  Floorplan_20231129125722.py  Floorplan_20231129125736.py  Floorplan_20231129125854.py  Floorplan_20231129125855.py  Floorplan_20231129125906.py  Floorplan_20231129125935.py  ai_20231129153031.py  ai_20231129155001.py  ai_20231129155018.py  ai_20231129155109.py  ai_20231129155115.py  ai_20231129155119.py  ai_20231129155120.py  ai_20231129155126.py  ai_20231129155135.py  ai_20231129155138.py  ai_20231129155210.py  ai_20231129155212.py  ai_20231129155218.py  ai_20231129155220.py  ai_20231129155905.py  ai_20231129155918.py  ai_20231129160121.py  ai_20231129160136.py  ai_20231129160152.py  ai_20231129160200.py  (+159 more)
src/backend/map/: blocked.kra  clustering_CSV.py  floor_plan_weiling.csv  floorplan.csv  floorplan.tmx  floorplan_semicolon.csv  generate_CSV.py  map.tiled-session  map_sized.xcf  path_blocked.xcf  path_exit.xcf  tiled.tsx
(+404 files in other folders)
