[metadata]
name = backend
version = 1.3.2
author = Marcel Ochsendorf
author_email = info@marcelochsendorf.com
description = Project
long_description = file: README.md
keywords = indoortracking, gps, positioning
license = Apache 2
classifiers =
    Programming Language :: Python :: 3


[options]
install_requires = file: requirements.txt
include_package_data = True
packages =  backend


python_requires = >=3.7

[options.package_data]
* =
    **/*.mag.json
    **/*.yaml
    **/*.html
    **/*.js
    **/*.css
    **/*.md
    **/*.json
    **/*.ts
    **/*.xml

#[options.entry_points]
#console_scripts =
#    MRPCli = MRPcli:main
#    MRPUdpp = MRPudpp:main
#    MRPRsp = MRPRotationalSensorProxy:main'